updated scrollbar's style and fixed ui bugs

--- a/src/components/Layouts/common/Header/Header.module.scss
+++ b/src/components/Layouts/common/Header/Header.module.scss
@@ -5,7 +5,12 @@
     --search-button-width: 52px;
     --search-width: 361px;
 
+    position: fixed;
+    top: 0;
+    left: 0;
     height: var(--default-layout-header-height);
+    background-color: var(--white);
+    z-index: 10;
     width: 100%;
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     display: flex;
